# voanews-backend-rocket

./: .gitignore  Cargo.toml
src/: main.rs
src/app/: api.rs  main.rs  mod.rs  parse_ps.rs  parse_titles.rs
src/app/impls/: mod.rs  transcribe.rs  translate.rs
src/my_trait/: query.rs
src/util/: file_io.rs  mod.rs  parse_titles.rs  youdao_transcribe.rs
