[package]
name = "voanews-backend-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
regex = "1.10.2"
reqwest = "0.11.22"
rocket = {version="=0.5.0-rc.4", features=["json"]}
scraper = "0.18.1"
serde = "1.0.193"
serde_json = "1.0.108"


